// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./CooldownButton.stories Default 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary css-1gbczjd-MuiButtonBase-root-MuiButton-root"
  tabindex="0"
  type="button"
>
  <span>
    Resend
  </span>
</button>
`;

exports[`./CooldownButton.stories LongCooldown 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary css-1gbczjd-MuiButtonBase-root-MuiButton-root"
  tabindex="0"
  type="button"
>
  <span>
    Try again
  </span>
</button>
`;

exports[`./CooldownButton.stories StartDisabled 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary css-1gbczjd-MuiButtonBase-root-MuiButton-root"
  disabled=""
  tabindex="-1"
  type="button"
>
  <span>
    Resend code
     in 10s
  </span>
</button>
`;
